# System-monitoring

./: README.md  metrics.db  pyproject.toml
app/: database.py  logging_config.py  main.py  metrics.py
app/schemas/: schem.py
app/static/css/: index.css  style.css
app/static/js/: index.js
app/templates/: index.html
