[project]
name = "system-monitoring-main"
version = "0.1.0"
description = ""
authors = [
    {name = "say-boop",email = "say284821@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "websockets (>=16.0,<17.0)",
    "wmi (>=1.5.1,<2.0.0)",
    "nvidia-ml-py3 (>=7.352.0,<8.0.0)",
    "pywin32 (>=312,<313)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
